--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section id="es-RC-container">
     <section class="es-hero">
       <header class="es-hero__left">
-        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" />
+        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" alt="Garnier Fructis logo"/>
         <p class="es-hero__left--new">nowość</p>
         <h1 class="es-hero__left--title">hair drink</h1>
         <p class="es-hero__left--subtitle">
@@ -30,11 +30,11 @@
 
       <div class="es-hero__right">
         <div class="es-hero__middle">
-          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png" />
-          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png" />
+          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png" alt="aż do 97% składników naturalnego pochodzenia"/>
+          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png" alt="produkt garnier fructis pineapple hair drink"/>
         </div>
         <div class="es-hero__right--headline">
-          <p>10x gładsze włosy* </br>efekt tafli wody</p>
+          <p>10x gładsze włosy* <br>efekt tafli wody</p>
         </div>
       </div>
     </section>
@@ -144,7 +144,7 @@
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe> -->
       </div>
-      </div>
+      <!-- </div> -->
     </section>
 
     <section class="es-before-after">
@@ -159,11 +159,11 @@
           <figure class="es-routine__single">
             <div class="es-routine__img">
               <a href="###" target="_blank">
-                <img src="./img/shampoo.png">
+                <img src="./img/shampoo.png" alt="Szampon Pineapple Hair Food">
               </a>
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
               <p class="es-routine__header--S">szampon</p>
               <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
@@ -172,10 +172,10 @@
           <figure class="es-routine__single">
             <div class="es-routine__img">
               <a href="###" target="_blank">
-              <img src="./img/mask.png"></a>
+              <img src="./img/mask.png" alt="Maska do włosów Pineapple Hair Food"></a>
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
               <p class="es-routine__header--S">maska</p>
               <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
@@ -184,11 +184,11 @@
           <figure class="es-routine__single">
             <div class="es-routine__img">
               <a href="###" target="_blank">
-                <img src="./img/conditioner.png">
+                <img src="./img/conditioner.png" alt="Odżywka pineapple hair food">
               </a>
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-left.png">
+            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
               <p class="es-routine__header--S">odżywka</p>
               <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
@@ -233,7 +233,7 @@
           </div>
           <figcaption class="es-cross__figcaption--2">
             <h3 class="es-cross__title">Papaja</h3>
-            <p class="es-cross__subtitle">93% mniej </br>złamanych włosów*</p>
+            <p class="es-cross__subtitle">93% mniej <br>złamanych włosów*</p>
             <p class="es-cross__descr">dla zniszczonych włosów</p>
             <a href="###" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
@@ -246,7 +246,7 @@
           </div>
           <figcaption class="es-cross__figcaption--3">
             <h3 class="es-cross__title">Banan</h3>
-            <p class="es-cross__subtitle">10x bardziej </br>odżywione włosy*</p>
+            <p class="es-cross__subtitle">10x bardziej <br>odżywione włosy*</p>
             <p class="es-cross__descr">dla suchych włosów</p>
             <a href="###" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
@@ -262,7 +262,7 @@
     </section>
 
     <footer class="es-footer">
-      <img src="./img/footer.png">
+      <img src="./img/footer.png" alt="stopka. Loga Cruelty Free International, Vegańska Formuła, aż do 97% składników naturalnego pochodzenia">
     </footer>
 
   </section>
