--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
 
       <section class="es-benefits__icon-wrapper">
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.png">
+          <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Natychmiastowe działanie</p>
             <p class="es-benefits__icon-single--descr">Efekt transformacji włosów w 10 sekund.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.png">
+          <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Efekt tafli wody</p>
             <p class="es-benefits__icon-single--descr">Niesamowity blask i 10x gładsze włosy*.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.png">
+          <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Składniki</p>
             <p class="es-benefits__icon-single--descr">97% składników naturalnego pochodzenia.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.png">
+          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Wegańska formuła</p>
             <p class="es-benefits__icon-single--descr">Bez silikonów dla naturalnych w dotyku włosów.</p>
@@ -104,21 +104,21 @@
       </div>
       <div class="es-use__wrapper">
         <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.png">
+          <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.jpg">
           <figcaption>
             <p class="es-use__single--step">Krok 1</p>
             <p class="es-use__single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p>
           </figcaption>
         </figure>
         <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-2-apply-on-hair.png">
+          <img class="es-use__single--img" src="./img/step-2-apply-on-hair.jpg">
           <figcaption>
             <p class="es-use__single--step">Krok 2</p>
             <p class="es-use__single--descr">Aplikuj omijając skórę głowy.</p>
           </figcaption>
         </figure>
         <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.png">
+          <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.jpg">
           <figcaption>
             <p class="es-use__single--step">Krok 3</p>
             <p class="es-use__single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p>
@@ -126,7 +126,7 @@
         </figure>
       </div>
       <!-- <div class="es-use__video--wrapper">
-          <video controls playsinline poster="./img/video.png" id="es-use__video--player">
+          <video controls playsinline poster="./img/video.jpg" id="es-use__video--player">
             <source src="" type="video/mp4">
             <source src="" type="video/ogg">
             Twoja przeglądarka nie pozwala na wyświetlanie filmów.
@@ -137,7 +137,7 @@
     <section class="es-video">
 
       <div class="es-video__videoCnt">
-        <img src="./img/video.png"> <!-- remove this -->
+        <img src="./img/video.jpg"> <!-- remove this -->
         <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
         <!-- <div class="es-video__container">
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
@@ -214,7 +214,7 @@
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
             <a href="###" target="_blank">
-              <img src="./img/pineapple.png">
+              <img src="./img/pineapple.jpg">
             </a>
           </div>
           <figcaption class="es-cross__figcaption--1">
@@ -227,7 +227,7 @@
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
             <a href="###" target="_blank">
-              <img src="./img/papaya.png">
+              <img src="./img/papaya.jpg">
             </a>
             
           </div>
@@ -241,7 +241,7 @@
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
             <a href="###" target="_blank">
-              <img src="./img/banana.png">
+              <img src="./img/banana.jpg">
             </a>
           </div>
           <figcaption class="es-cross__figcaption--3">
