add cross sell links

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         <div class="es-routine__wrapper--flex">
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <a href="###" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657" target="_blank">
                 <img src="./img/shampoo.png" alt="Szampon Pineapple Hair Food">
               </a>
-              <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
+              <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
             <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
@@ -171,9 +171,9 @@
           </figure>
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <a href="###" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660" target="_blank">
               <img src="./img/mask.png" alt="Maska do włosów Pineapple Hair Food"></a>
-              <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
+              <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
             <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
@@ -213,7 +213,7 @@
       <div class=es-cross__wrapper--flex>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <a href="###" target="_blank">
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659" target="_blank">
               <img src="./img/pineapple.jpg">
             </a>
           </div>
@@ -221,7 +221,7 @@
             <h3 class="es-cross__title">Ananas</h3>
             <p class="es-cross__subtitle">48H blasku*</p>
             <p class="es-cross__descr">dla długich, matowych włosów</p>
-            <a href="###" target="_blank" class="es-cross__button">Zobacz więcej</a>
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
         <figure class="es-cross__single">
@@ -240,7 +240,7 @@
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <a href="###" target="_blank">
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659" target="_blank">
               <img src="./img/banana.jpg">
             </a>
           </div>
@@ -248,7 +248,7 @@
             <h3 class="es-cross__title">Banan</h3>
             <p class="es-cross__subtitle">10x bardziej <br>odżywione włosy*</p>
             <p class="es-cross__descr">dla suchych włosów</p>
-            <a href="###" target="_blank" class="es-cross__button">Zobacz więcej</a>
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659" target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
       </div>
