--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
 
   <!-- stylesheet -->
   <link rel="stylesheet" href="style.css" />
@@ -19,7 +21,7 @@
   <section id="es-RC-container">
     <section class="es-hero">
       <header class="es-hero__left">
-        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" alt="Garnier Fructis logo"/>
+        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" alt="Garnier Fructis logo" />
         <p class="es-hero__left--new">nowość</p>
         <h1 class="es-hero__left--title">hair drink</h1>
         <p class="es-hero__left--subtitle">
@@ -30,8 +32,10 @@
 
       <div class="es-hero__right">
         <div class="es-hero__middle">
-          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png" alt="aż do 97% składników naturalnego pochodzenia"/>
-          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png" alt="produkt garnier fructis pineapple hair drink"/>
+          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png"
+            alt="aż do 97% składników naturalnego pochodzenia" />
+          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png"
+            alt="produkt garnier fructis pineapple hair drink" />
         </div>
         <div class="es-hero__right--headline">
           <p>10x gładsze włosy* <br>efekt tafli wody</p>
@@ -125,26 +129,26 @@
           </figcaption>
         </figure>
       </div>
-      <!-- <div class="es-use__video--wrapper">
-          <video controls playsinline poster="./img/video.jpg" id="es-use__video--player">
-            <source src="" type="video/mp4">
-            <source src="" type="video/ogg">
-            Twoja przeglądarka nie pozwala na wyświetlanie filmów.
-          </video>
-        </div> -->
+      
     </section>
 
     <section class="es-video">
-
-      <div class="es-video__videoCnt">
-        <img src="./img/video.jpg"> <!-- remove this -->
-        <p>vid placeholder image as I haven't received a link</p> <!-- remove this -->
-        <!-- <div class="es-video__container">
+      <div class="es-videoCnt">
+          <video controls playsinline poster="./img/video.jpg" id="es-use__video--player">
+            <source src="./Hair-drink-how-to-16s.mp4" type="video/mp4">
+            <!-- <source src="" type="video/ogg"> -->
+            Twoja przeglądarka nie pozwala na wyświetlanie filmów.
+          </video>
+        </div>
+      <!-- <div class="es-video__videoCnt">
+        <img src="./img/video.jpg"> remove this
+        <p>vid placeholder image as I haven't received a link</p> remove this
+        <div class="es-video__container">
           <iframe class="es-video__iframe" width="100%" height="auto" src="https://www.youtube.com/embed/AM8_yie72W8"
             frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe> -->
-      </div>
-      <!-- </div> -->
+            allowfullscreen></iframe>
+        </div>
+      </div> -->
     </section>
 
     <section class="es-before-after">
@@ -158,10 +162,12 @@
         <div class="es-routine__wrapper--flex">
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657" target="_blank">
+              <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657"
+                target="_blank">
                 <img src="./img/shampoo.png" alt="Szampon Pineapple Hair Food">
               </a>
-              <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657" target="_blank" class="es-routine__button">Sprawdź</a>
+              <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657"
+                target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
             <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
@@ -171,9 +177,11 @@
           </figure>
           <figure class="es-routine__single">
             <div class="es-routine__img">
-              <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660" target="_blank">
-              <img src="./img/mask.png" alt="Maska do włosów Pineapple Hair Food"></a>
-              <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660" target="_blank" class="es-routine__button">Sprawdź</a>
+              <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660"
+                target="_blank">
+                <img src="./img/mask.png" alt="Maska do włosów Pineapple Hair Food"></a>
+              <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660"
+                target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
             <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
@@ -213,7 +221,8 @@
       <div class=es-cross__wrapper--flex>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659" target="_blank">
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659"
+              target="_blank">
               <img src="./img/pineapple.jpg">
             </a>
           </div>
@@ -221,7 +230,8 @@
             <h3 class="es-cross__title">Ananas</h3>
             <p class="es-cross__subtitle">48H blasku*</p>
             <p class="es-cross__descr">dla długich, matowych włosów</p>
-            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659" target="_blank" class="es-cross__button">Zobacz więcej</a>
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659"
+              target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
         <figure class="es-cross__single">
@@ -229,7 +239,7 @@
             <a href="###" target="_blank">
               <img src="./img/papaya.jpg">
             </a>
-            
+
           </div>
           <figcaption class="es-cross__figcaption--2">
             <h3 class="es-cross__title">Papaja</h3>
@@ -240,7 +250,8 @@
         </figure>
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
-            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659" target="_blank">
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659"
+              target="_blank">
               <img src="./img/banana.jpg">
             </a>
           </div>
@@ -248,7 +259,8 @@
             <h3 class="es-cross__title">Banan</h3>
             <p class="es-cross__subtitle">10x bardziej <br>odżywione włosy*</p>
             <p class="es-cross__descr">dla suchych włosów</p>
-            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659" target="_blank" class="es-cross__button">Zobacz więcej</a>
+            <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659"
+              target="_blank" class="es-cross__button">Zobacz więcej</a>
           </figcaption>
         </figure>
       </div>
@@ -262,7 +274,8 @@
     </section>
 
     <footer class="es-footer">
-      <img src="./img/footer.png" alt="stopka. Loga Cruelty Free International, Vegańska Formuła, aż do 97% składników naturalnego pochodzenia">
+      <img src="./img/footer.png"
+        alt="stopka. Loga Cruelty Free International, Vegańska Formuła, aż do 97% składników naturalnego pochodzenia">
     </footer>
 
   </section>
