comment out video

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
     </section>
 
     <section class="es-video">
-      <div class="es-videoCnt">
+      <!-- <div class="es-videoCnt">
           <video controls playsinline poster="./img/video.jpg" id="es-use__video--player">
             <source src="./Hair-drink-how-to-16s.mp4" type="video/mp4">
-            <!-- <source src="" type="video/ogg"> -->
+            <source src="" type="video/ogg">
             Twoja przeglądarka nie pozwala na wyświetlanie filmów.
           </video>
-        </div>
+        </div> -->
       <!-- <div class="es-video__videoCnt">
         <img src="./img/video.jpg"> remove this
         <p>vid placeholder image as I haven't received a link</p> remove this
