--- a/Portals/0/rich-content/garnier/hairdrink/index.html
+++ b/Portals/0/rich-content/garnier/hairdrink/index.html
@@ -14,14 +14,14 @@
     rel="stylesheet">
 
   <!-- stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/css/style.css" />
 </head>
 
 <body>
   <section id="es-RC-container">
     <section class="es-hero">
       <header class="es-hero__left">
-        <img class="es-hero__left--logo" src="./img/garnier-fructis-logo.png" alt="Garnier Fructis logo" />
+        <img class="es-hero__left--logo" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/garnier-fructis-logo.png" alt="Garnier Fructis logo" />
         <p class="es-hero__left--new">nowość</p>
         <h1 class="es-hero__left--title">hair drink</h1>
         <p class="es-hero__left--subtitle">
@@ -32,9 +32,9 @@
 
       <div class="es-hero__right">
         <div class="es-hero__middle">
-          <img class="es-hero__middle--badge" src="./img/badge-97-percent-natural-origin.png"
+          <img class="es-hero__middle--badge" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/badge-97-percent-natural-origin.png"
             alt="aż do 97% składników naturalnego pochodzenia" />
-          <img class="es-hero__middle--packshot" src="./img/hair-drink-packshot.png"
+          <img class="es-hero__middle--packshot" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/hair-drink-packshot.png"
             alt="produkt garnier fructis pineapple hair drink" />
         </div>
         <div class="es-hero__right--headline">
@@ -62,28 +62,28 @@
 
       <section class="es-benefits__icon-wrapper">
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-immediate-effect.jpg">
+          <img class="es-benefits__icon-single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/icon-immediate-effect.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Natychmiastowe działanie</p>
             <p class="es-benefits__icon-single--descr">Efekt transformacji włosów w 10 sekund.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-smoother-hair.jpg">
+          <img class="es-benefits__icon-single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/icon-smoother-hair.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Efekt tafli wody</p>
             <p class="es-benefits__icon-single--descr">Niesamowity blask i 10x gładsze włosy*.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-97-percent-natural-ingredients.jpg">
+          <img class="es-benefits__icon-single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/icon-97-percent-natural-ingredients.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Składniki</p>
             <p class="es-benefits__icon-single--descr">97% składników naturalnego pochodzenia.</p>
           </figcaption>
         </figure>
         <figure class="es-benefits__icon-single">
-          <img class="es-benefits__icon-single--img" src="./img/icon-vegan-formula.jpg">
+          <img class="es-benefits__icon-single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/icon-vegan-formula.jpg">
           <figcaption>
             <p class="es-benefits__icon-single--title">Wegańska formuła</p>
             <p class="es-benefits__icon-single--descr">Bez silikonów dla naturalnych w dotyku włosów.</p>
@@ -108,21 +108,21 @@
       </div>
       <div class="es-use__wrapper">
         <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-1-squeeze-water-out.jpg">
+          <img class="es-use__single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/step-1-squeeze-water-out.jpg">
           <figcaption>
             <p class="es-use__single--step">Krok 1</p>
             <p class="es-use__single--descr">Po umyciu szamponem odciśnij z włosów nadmiar wody.</p>
           </figcaption>
         </figure>
         <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-2-apply-on-hair.jpg">
+          <img class="es-use__single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/step-2-apply-on-hair.jpg">
           <figcaption>
             <p class="es-use__single--step">Krok 2</p>
             <p class="es-use__single--descr">Aplikuj omijając skórę głowy.</p>
           </figcaption>
         </figure>
         <figure class="es-use__single">
-          <img class="es-use__single--img" src="./img/step-3-wait-and-rinse.jpg">
+          <img class="es-use__single--img" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/step-3-wait-and-rinse.jpg">
           <figcaption>
             <p class="es-use__single--step">Krok 3</p>
             <p class="es-use__single--descr">Wmasuj przez 10 sekund, spłucz i wysusz włosy jak zwykle.</p>
@@ -164,12 +164,12 @@
             <div class="es-routine__img">
               <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657"
                 target="_blank">
-                <img src="./img/shampoo.png" alt="Szampon Pineapple Hair Food">
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/shampoo.png" alt="Szampon Pineapple Hair Food">
               </a>
               <a href="https://www.rossmann.pl/Produkt/Szampony/Garnier-Fructis-Hair-Food-Pineapple-szampon-do-wlosow-olsniewajacy-blask-350-ml,421403,8657"
                 target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--1" src="./img/arrow-left.png" alt="strzałka w dół">
+            <img class="es-routine__arrow es-routine__arrow--1" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
               <p class="es-routine__header--S">szampon</p>
               <p class="es-routine__descr">Delikatnie oczyszcza i odżywia włosy bez obciążenia.</p>
@@ -179,11 +179,11 @@
             <div class="es-routine__img">
               <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660"
                 target="_blank">
-                <img src="./img/mask.png" alt="Maska do włosów Pineapple Hair Food"></a>
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/mask.png" alt="Maska do włosów Pineapple Hair Food"></a>
               <a href="https://www.rossmann.pl/Produkt/Maski/Garnier-Fructis-Hair-Food-Pineapple-maska-do-wlosow-olsniewajacy-blask-400-ml,421402,8660"
                 target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--2" src="./img/arrow-left.png" alt="strzałka w dół">
+            <img class="es-routine__arrow es-routine__arrow--2" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
               <p class="es-routine__header--S">maska</p>
               <p class="es-routine__descr">Intensywnie odżywia włosy i zapewnia olśniewający blask.</p>
@@ -192,11 +192,11 @@
           <figure class="es-routine__single">
             <div class="es-routine__img">
               <a href="###" target="_blank">
-                <img src="./img/conditioner.png" alt="Odżywka pineapple hair food">
+                <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/conditioner.png" alt="Odżywka pineapple hair food">
               </a>
               <a href="###" target="_blank" class="es-routine__button">Sprawdź</a>
             </div>
-            <img class="es-routine__arrow es-routine__arrow--3" src="./img/arrow-left.png" alt="strzałka w dół">
+            <img class="es-routine__arrow es-routine__arrow--3" src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/arrow-left.png" alt="strzałka w dół">
             <figcaption>
               <p class="es-routine__header--S">odżywka</p>
               <p class="es-routine__descr">Intensywnie nawilża i ułatwia rozczesywanie.</p>
@@ -223,7 +223,7 @@
           <div class="es-cross__img-container">
             <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Pineapple-blyskawiczna-odzywka-do-wlosow-w-plynie-Olsniewajacy-Blask-20,421341,8659"
               target="_blank">
-              <img src="./img/pineapple.jpg">
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/pineapple.jpg">
             </a>
           </div>
           <figcaption class="es-cross__figcaption--1">
@@ -237,7 +237,7 @@
         <figure class="es-cross__single">
           <div class="es-cross__img-container">
             <a href="###" target="_blank">
-              <img src="./img/papaya.jpg">
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/papaya.jpg">
             </a>
 
           </div>
@@ -252,7 +252,7 @@
           <div class="es-cross__img-container">
             <a href="https://www.rossmann.pl/Produkt/Odzywki/Garnier-Fructis-Hair-Food-Banana-blyskawiczna-odzywka-do-wlosow-w-plynie-odzywcza-200-ml,421342,8659"
               target="_blank">
-              <img src="./img/banana.jpg">
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/banana.jpg">
             </a>
           </div>
           <figcaption class="es-cross__figcaption--3">
@@ -274,7 +274,7 @@
     </section>
 
     <footer class="es-footer">
-      <img src="./img/footer.png"
+      <img src="https://www.ros.net.pl/Portals/0/rich-content/garnier/hairdrink/img/footer.png"
         alt="stopka. Loga Cruelty Free International, Vegańska Formuła, aż do 97% składników naturalnego pochodzenia">
     </footer>
 
